# Persyst_Spike_Detection_Project

./: README.md  pyproject.toml
src/: annotations_persyst2elpi.py  laydat_to_edf.py  laydat_to_raw.py  main.py  montage_creator.py  mossdet_detection.py  persyst_spikes_evaluator.py  raw_to_edf.py  run_MOSSDET.py  spike_evaluator_main.py
