[tool.poetry]
name = "persyst-spike-detection-project"
version = "0.1.0"
description = "Persyst-Mitacs project on the automatic detection of inter-ictal epileptic spikes"
authors = ["dlp <mossdet.detector@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "1.4"
seaborn = "0.13"
mne = "1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"