[tool.poetry]
name = "persyst-spike-detection-project"
version = "0.1.0"
description = "Persyst-Mitacs project on the automatic detection of inter-ictal epileptic spikes"
authors = ["dlp <mossdet.detector@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "2.0.1"
scikit-learn = "1.5.1"
seaborn = "0.13.2"
mne = "1.7.1"
EDFlib-Python = "1.0.8"
edfio = "0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"